dbeaver/pro#7740 Fix review comments